MaJ dependences + github actions pour maven deploy